# check_plagiarism

./: check_plagiarism.py  pyproject.toml  requirements.txt
src/: check_plagiarism.py
